--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^5.0.5",
     "expo": "~36.0.0",
     "expo-font": "^8.0.0",
+    "expo-linear-gradient": "^8.0.0",
     "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -22,7 +23,7 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.1",
-    "react-navigation-drawer": "^2.3.4",
+    "react-navigation-drawer": "^2.4.2",
     "react-navigation-header-buttons": "^3.0.5",
     "react-navigation-stack": "^2.1.1",
     "react-redux": "^7.1.3",
